# az-logs-monitor-query

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
