[tool.poetry]
name = "az-logs-monitor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "az_logs_monitor"}]

[tool.poetry.dependencies]
python = "^3.10"
azure-identity = "^1.10.0"
pandas = "^1.4.4"
azure-monitor-query = "^1.0.3"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
mypy = "^0.971"
autoflake = "^1.5.3"
isort = "^5.10.1"
python-dotenv = "^0.21.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
